# svd_streamlit

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  svd_model.pkl  train_svd.py
utils/: data_io.py  preprocessing.py
